# carapaca

./: LICENSE  README.md
CA/: Cargo.toml  gui.py
CA/src/: db_service.rs  ecc_el_gammal.rs  lib.rs  loggin.rs  main.rs  rsa.rs  signup.rs  user.rs
client/: Cargo.toml
client/session_keys/: Gabriel_session_key.txt  Pobedinsky_session_key_aes.txt
client/src/: ca.rs  init.rs  ip.rs  main.rs  server.rs
data/: lixeira.sh  permitted_users.txt
data/keys/: CA_RSA_public_key.pem
data/keys/clients/: Gabriel_ecc.pem  Gabriel_ip.txt  Gabriel_rsa.pem  Pobedinsky_ecc.pem  Pobedinsky_ip.txt  Pobedinsky_rsa.pem  Teste_ecc.pem  Teste_rsa.pem
data/myself/: ECC_private_key.pem  ECC_public_key.pem  RSA_private_key.pem  RSA_public_key.pem
data/nonces/: Pobedinsky.txt  Teste.txt
lib/: aes.rs  ecc_el_gammal.rs  lib.rs  rsa.rs
server/: Cargo.toml
server/session_keys/: Pobedinsky_session_key.txt
server/shell_server/: server.py
server/src/: main.rs  shell.rs
