[package]
name = "ca"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }


serde_json = "1.0"
openssl = "0.10"
thiserror = "1.0"
hex = "0.4"
firestore = "0.45.0"
uuid ={ version = "1.16.0", features = ["v4"]}
base64 = "0.21"

aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand_core = "0.6"
k256 = { version = "0.13", features = ["pkcs8", "pem"] }


generic-array = "0.14"

rand = "0.8"
url = "2.2"
serde-firestore-value = "0.20.1"

[lib]
name = "ciphering"
path = "src/lib.rs"
